feat: ZGC live diagnosis (argus zgc) + ZGC-aware doctor/gcscore/gclog
Adds first-class ZGC support across the CLI. Closes the gap where
Argus previously detected the algorithm but had no ZGC-specific
pathology surface — allocation stalls, soft-max breach, cycle overlap
all flagged in one command vs the JMC + jcmd + jstack toolchain.

New command
- argus zgc <PID> [--duration=N] (5-120s, default 30s) — live JFR
  capture (jdk.ZAllocationStall, ZYoung/Old/GarbageCollection,
  GCHeapSummary), verdict HEALTHY/WARNING/UNHEALTHY driven by:
  stalls present (UNHEALTHY), cycle overlap (UNHEALTHY),
  committed > SoftMaxHeapSize (WARNING), Pause Mark End >1ms (WARNING).

GC log pipeline
- ALLOCATION_STALL regex in GcLogPatterns; parser + follower emit
  ZGC Allocation Stall events; analyzer aggregates count/total/max/
  topThread; gclog command renders dedicated section before pause
  summary (only when count>0).

Doctor rules (auto-fire under argus doctor)
- ZgcSoftMaxBreachRule (WARNING) — committed > SoftMaxHeapSize.
- ZgcCycleOverlapRule (CRITICAL) — avg cycle duration > 80% of
  inter-cycle interval over >=5 cycles.
- GcAlgorithmRule (INFO) — JDK 21-23 + non-generational ZGC -->
  suggest -XX:+ZGenerational.

Generational ZGC
- JvmSnapshotCollector.canonicalGcAlgorithm now returns
  "ZGC (Generational)" when ZGC Major/Minor MBeans are present.
  All downstream rules use algo.contains("ZGC") matching.

GcScore + Suggest
- GcScoreCalculator: ZGC branch halves pause-tail/p99 weights
  (sub-ms by design), adds Allocation Pressure axis (cycle freq),
  retargets recommendations to -Xmx/SoftMaxHeapSize/ConcGCThreads.
- SuggestCommand: --advanced flag; ZGC-only suggestions for
  -XX:SoftMaxHeapSize, -XX:ZAllocationSpikeTolerance,
  -XX:+ZUncommit -XX:ZUncommitDelay=300; suppresses no-op
  -XX:MaxGCPauseMillis under ZGC.

i18n
- 41 new keys across en/ko/ja/zh (cmd.zgc.*, cli.zgc.*,
  cli.gclog.allocation.stall.*, suggest.zgc.*). Doctor rule
  strings remain English literals (Heal